# cram

./: .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  dist-workspace.toml  justfile  seal.toml  zensical.toml
.github/: CODE_OF_CONDUCT.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yml  docs.yml  release.yml
crates/cram/: Cargo.toml
crates/cram/src/: main.rs  settings.rs
crates/cram/src/commands/: decks.rs  gui.rs  list.rs  mod.rs  self_update.rs  sync.rs
crates/cram/tests/: decks.rs
crates/cram/tests/it/: decks.rs  exchange.rs  main.rs  sources.rs
crates/cram/tests/it/common/: mod.rs
crates/cram_cli/: Cargo.toml
crates/cram_cli/src/: lib.rs
crates/cram_core/: Cargo.toml
crates/cram_core/src/: card.rs  deck.rs  lib.rs  rating.rs  sm2.rs
crates/cram_core/tests/: large_deck_stress.rs
crates/cram_render/: Cargo.toml
crates/cram_render/benches/: render_throughput.rs
crates/cram_render/src/: error.rs  lib.rs  world.rs
crates/cram_render/tests/: render_pipeline.rs  visual_regression.rs
crates/cram_static/: Cargo.toml
crates/cram_static/src/: lib.rs
crates/cram_store/: Cargo.toml
crates/cram_store/src/: error.rs  exchange.rs  git.rs  lib.rs  multi_store.rs  sources.rs  store.rs  study_stats.rs  ui_state.rs
crates/cram_store/tests/: large_deck_stress.rs  serialization_proptest.rs  store_roundtrip.rs
crates/cram_ui/: Cargo.toml
crates/cram_ui/src/: app.rs  deck_list.rs  editor.rs  highlight.rs  lib.rs  search.rs  sources.rs  stats.rs  study.rs  style.rs  texture_cache.rs  theme.rs  ui_state.rs
docs/: configuration.md  getting-started.md  index.md  installation.md  spaced-repetition.md  writing-cards.md
it/: Cargo.toml
it/tests/: render_pipeline.rs  sm2_review.rs  store_roundtrip.rs
