[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.91"
homepage = "https://github.com/MatthewMckee4/cram"
repository = "https://github.com/MatthewMckee4/cram"
authors = ["Matthew McKee <matthewmckee04@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
cram_cli = { path = "crates/cram_cli" }
cram_core = { path = "crates/cram_core" }
cram_render = { path = "crates/cram_render" }
cram_store = { path = "crates/cram_store" }
cram_ui = { path = "crates/cram_ui" }

anyhow = "1"
axoupdater = { version = "0.10", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports"] }
dirs = "6"
eframe = { version = "0.33", features = ["default"] }
egui = "0.33"
image = { version = "0.25", features = ["png"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typst = "0.14"
typst-kit = { version = "0.14", default-features = false, features = ["fonts", "embed-fonts"] }
typst-render = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.dev]
opt-level = 0

[profile.dist]
inherits = "release"
lto = "thin"
