[package]
name = "cram_it"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
chrono = { workspace = true }
cram_core = { path = "../crates/cram_core" }
cram_render = { path = "../crates/cram_render" }
cram_store = { path = "../crates/cram_store" }
tempfile = { workspace = true }
