[package]
name = "cram"
version = "0.0.1-alpha.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cram"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cram_store.workspace = true
cram_ui.workspace = true
eframe.workspace = true
egui.workspace = true
tracing-subscriber.workspace = true
