[package]
name = "cram"
version = "0.0.1-alpha.1"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cram"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axoupdater.workspace = true
clap.workspace = true
cram_cli.workspace = true
cram_core.workspace = true
cram_store.workspace = true
cram_ui.workspace = true
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
owo-colors.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
regex.workspace = true
tempfile.workspace = true
