[package]
name = "cram_render"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
typst.workspace = true
typst-kit.workspace = true
typst-render.workspace = true

[dev-dependencies]
criterion.workspace = true
image.workspace = true

[[bench]]
name = "render_throughput"
harness = false
