[package]
name = "cram_render"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
thiserror.workspace = true
typst.workspace = true
typst-kit.workspace = true
typst-render.workspace = true

[dev-dependencies]
cram_core.workspace = true
cram_store.workspace = true
image.workspace = true
insta.workspace = true
tempfile.workspace = true
