[package]
name = "cram_ui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cram_core.workspace = true
cram_render.workspace = true
cram_store.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
tracing.workspace = true
