[package]
name = "cram_ui"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cram_core.workspace = true
cram_render.workspace = true
cram_store.workspace = true
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
rfd.workspace = true
tracing.workspace = true
