[package]
name = "cram_ui"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cram_core.workspace = true
cram_render.workspace = true
cram_store.workspace = true
dirs.workspace = true
eframe.workspace = true
egui.workspace = true
image.workspace = true
rfd.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
